--- a/src/features/Nav.css
+++ b/src/features/Nav.css
@@ -22,7 +22,7 @@ nav {
 #zy {
   border-radius: 6px;
   color: white;
-  background-color: #0074ff;
+  background-color:black;
   width: 170px;
   height: 35px;
   font-size: 16px;
